--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -32,7 +32,7 @@
                 <div class="span4" style="margin-top: 5px;">
                 <% if current_user.manageable_courses.include? course %>
                 <span class="label-tag notice course-notification"><%= link_to(t('courses.edit'), edit_course_path(course)) %></span> 
-                <span class="label-tag important course-notification"><%= link_to(t('courses.delete'), course_path(course), :confirm => t('confirm_delete'), :method => :delete) %></span>
+                <!--<span class="label-tag important course-notification"><%= link_to(t('courses.delete'), course_path(course), :confirm => t('confirm_delete'), :method => :delete) %></span>-->
                 <% end %>
                 </div>
               </div>
