--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -632,7 +632,7 @@ textarea,
 select,
 .uneditable-input {
   display: inline-block;
-  width: 210px;
+  /*width: 210px;*/
   height: 18px;
   padding: 4px;
   font-size: 13px;
