--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -274,6 +274,16 @@ ul.left-nav-main-ul {
 	width: 150px;
 }
 
+.left-nav-main-ul li a.informacion {
+	background: url(menu-info.png) no-repeat 5px;
+	padding-left: 30px;
+}
+
+.left-nav-main-ul li a.informacion:hover {
+	background: #00afc9 url(menu-info.png) no-repeat 5px;
+	width: 150px;
+}
+
 .left-nav-main-ul li a.miembros {
 	background: url(menu-amigos.png) no-repeat 5px;
 	padding-left: 30px;
