--- a/app/views/courses/wall.html.erb
+++ b/app/views/courses/wall.html.erb
@@ -1,4 +1,33 @@
-<%= t('.header') %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('courses.wall.header') %></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+      
+      <div class="span10">
+        <h2><%= t('.header') %></h2>
 
-<%= render :partial => 'comments/comments',   :locals => {:commentable => @course} %>
-<%= render :partial => 'comments/form',       :locals => {:commentable => @course} %>
+        <%= render :partial => 'comments/comments',   :locals => {:commentable => @course} %>
+        <%= render :partial => 'comments/form',       :locals => {:commentable => @course} %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+    
+  </div>
+</div>
