--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -11,17 +11,13 @@
       <ul class="nav">
         <li class="active"><%= link_to('Inicio', root_path) %></li>
         <li><%= link_to 'Perfil', current_user %></li>
-        <li><a href="#">Bandeja de Entrada</a></li>
-        <li><%= link_to t('shared.toolbar.logout'), destroy_user_session_path, :method => :delete %></li>
-        <li><%= link_to t('shared.toolbar.settings'), settings_path %></li>
       </ul>
 
       <ul class="nav secondary-nav">
         <li class="dropdown">
-          <%= link_to current_user.first_name, "#", :class => "dropdown-toggle" %>
+          <%= link_to "#{current_user.first_name}" + " #{current_user.last_name}", "#", :class => "dropdown-toggle" %>
           <ul class="dropdown-menu">
-            <li><a href="#">Secondary link</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to t('shared.toolbar.settings'), settings_path %></li>
             <li class="divider"></li>
             <li><%= link_to t('.logout'), destroy_user_session_path, :method => :delete %></li>
           </ul>
