--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -1334,9 +1334,9 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-image: -o-linear-gradient(top, #333333, #222222);
   background-image: linear-gradient(top, #333333, #222222);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);*/
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 .topbar div > ul, .nav {
   display: block;
@@ -1391,7 +1391,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .nav .menu-dropdown,
 .topbar div > ul .dropdown-menu,
 .nav .dropdown-menu {
-  background-color: #333;
+  background-color: #0c3237;
 }
 .topbar div > ul .menu-dropdown a.menu,
 .nav .menu-dropdown a.menu,
@@ -1425,8 +1425,8 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .nav .menu-dropdown li a:hover,
 .topbar div > ul .dropdown-menu li a:hover,
 .nav .dropdown-menu li a:hover {
-  background-color: #191919;
-  background-repeat: repeat-x;
+  background-color: #00282E;
+  /*background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#292929), to(#191919));
   background-image: -moz-linear-gradient(top, #292929, #191919);
   background-image: -ms-linear-gradient(top, #292929, #191919);
@@ -1434,7 +1434,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
   background-image: -webkit-linear-gradient(top, #292929, #191919);
   background-image: -o-linear-gradient(top, #292929, #191919);
   background-image: linear-gradient(top, #292929, #191919);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#292929', endColorstr='#191919', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#292929', endColorstr='#191919', GradientType=0);*/
   color: #ffffff;
 }
 .topbar div > ul .menu-dropdown .active a,
@@ -1447,7 +1447,7 @@ table .headerSortUp.purple, table .headerSortDown.purple {
 .nav .menu-dropdown .divider,
 .topbar div > ul .dropdown-menu .divider,
 .nav .dropdown-menu .divider {
-  background-color: #222;
+  background-color: #00282E;
   border-color: #444;
 }
 .topbar ul .menu-dropdown li a, .topbar ul .dropdown-menu li a {
@@ -1478,7 +1478,7 @@ a.menu:after, .dropdown-toggle:after {
   float: left;
   display: none;
   position: absolute;
-  top: 40px;
+  top: 39px;
   z-index: 900;
   min-width: 160px;
   max-width: 220px;
@@ -1523,7 +1523,7 @@ a.menu:after, .dropdown-toggle:after {
   text-shadow: 0 1px 0 #ffffff;
 }
 .topbar .dropdown-menu a:hover, .dropdown-menu a:hover {
-  background-color: #dddddd;
+  /*background-color: #dddddd;
   background-repeat: repeat-x;
   background-image: -khtml-gradient(linear, left top, left bottom, from(#eeeeee), to(#dddddd));
   background-image: -moz-linear-gradient(top, #eeeeee, #dddddd);
@@ -1532,7 +1532,7 @@ a.menu:after, .dropdown-toggle:after {
   background-image: -webkit-linear-gradient(top, #eeeeee, #dddddd);
   background-image: -o-linear-gradient(top, #eeeeee, #dddddd);
   background-image: linear-gradient(top, #eeeeee, #dddddd);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);*/
   color: #404040;
   text-decoration: none;
   -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.025), inset 0 -1px rgba(0, 0, 0, 0.025);
