--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -39,7 +39,7 @@
               <div class="course-by">
                 <%= t('courses.by') %> <%= course.owner.name %> - <%= course.reference %>
               </div>
-              <p class="padding-right"><%= truncate(course.description, :length => 200) %></p>
+              <p class="padding-right"><%= truncate(course.description, :length => 200).html_safe %></p>
 
               <p style="color:red;">
               <% enrollment = current_user.enrollments.where(:course_id => course).first %>
