--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -184,6 +184,43 @@ body {
   border-radius: 6px;
 }
 
+.current {
+	width: 29px;
+	height: 29px;
+	padding: 10px 10px 1px;
+	background-color: rgba(0, 175, 201, 1);
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	color: #fff;
+}
+
+.wall label {
+	display: none;
+}
+
+.wall .actions {
+  	margin-top: 0;
+ 	margin-bottom: 18px;
+	padding: 5px 20px 1px;
+}
+
+.wall .textarea-size {
+	width: 480px;
+}
+
+.wall .comment-box {
+	border-top: 1px solid #eaeaea;
+	padding-top: 10px;
+	margin-top: 10px;
+}
+
+.wall .span1 {
+	margin-left: 20px;
+}
+
+.wall h6 {
+	line-height: 10px;
+	margin-bottom: 5px;
+}
 /* @end */
 
 /* @group Standard */
