--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,6 +1,6 @@
 <%= semantic_form_for Comment.new, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
   <%= form.inputs :text do %>
-    <%= form.input :text, :input_html => {:rows => 3, :class => "textarea-size"} %>
+    <%= form.input :text, :input_html => {:rows => 1, :class => "span8"} %>
   <% end %>
   <%= form.buttons do %>
     <%= form.commit_button :button_html => {:id => :submit, :class => "btn right"} %>
