--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,16 +1,47 @@
-<ul class="comments">
+<% content_for :head do %>
+<style>
   <% commentable.comments.each do |comment| %>
-    <li class="comment" id="<%= "comment_#{comment.id}" %>">
-      <%= comment.user.name %>
-      <%= comment.text %>
-      <% if current_user.can_destroy_comment? comment %>
-        <%= link_to t('.remove'), comment, :method => :delete, :confirm => t('confirm_delete') %> 
-      <% end %>
-      <% unless Comment === comment.commentable %>
-        <%= link_to t('comment'), '#' %>
-        <%= render :partial => 'comments/form', :locals => {:commentable => comment} %>
-      <% end %>
-    </li>
+    .wall .comment-box<%= comment.id %> {
+    	display: none;
+    }
+  <% end %>
+</style>
+<script>
+  $(document).ready(function() {
+    <% commentable.comments.each do |comment| %>
+    $('.toggle<%= comment.id %>').click(function() {
+      $('.comment-box<%= comment.id %>').show(400);
+      return false;
+    });
+    <% end %>
+  });
+</script>
+<% end %>
+<div class="comments">
+  <% commentable.comments.each do |comment| %>
+    <div class="comment comment-box" id="<%= "comment_#{comment.id}" %>">
+      <div class="row">
+        <div class="span1"><%= link_to(image_tag(comment.user.avatar_file.xsmall.url), user_path(comment.user)) %></div>
+        <div class="span8">
+          <h6><%= link_to comment.user.name, user_path(comment.user) %></h6>
+          <blockquote>
+            <p><%= comment.text %></p>
+            <small><%= time_ago_in_words(comment.created_at) %></small>
+          </blockquote>
+          <p>
+          <% if current_user.can_destroy_comment? comment %>
+            <%= link_to t('.remove'), comment, :method => :delete, :confirm => t('confirm_delete') %> -
+          <% end %>
+          <% unless Comment === comment.commentable %>
+            <%= link_to t('comment'), '#' , :class => "toggle#{comment.id}"%>
+            <div class="comment-box<%= comment.id %>">
+              <%= render :partial => 'comments/comment_form', :locals => {:commentable => comment} %>
+            </div>
+          <% end %>
+          </p>
+        </div>
+      </div>
+    </div>
     <%= render :partial => 'comments/comments', :locals => {:commentable => comment} unless comment.comments.blank? %>
   <% end %>
-</ul>
+</div>
