--- a/app/views/courses/wall.html.erb
+++ b/app/views/courses/wall.html.erb
@@ -18,11 +18,13 @@
         <%= render :partial => "courses/members_menu" %>
       </div>
       
-      <div class="span10">
-        <h2><%= t('.header') %></h2>
-
+      <div class="span10 wall">
+        
+        <div class="actions">
+          <h2><%= t('.header') %></h2>
+          <%= render :partial => 'comments/form',       :locals => {:commentable => @course} %>
+        </div>
         <%= render :partial => 'comments/comments',   :locals => {:commentable => @course} %>
-        <%= render :partial => 'comments/form',       :locals => {:commentable => @course} %>
       </div>
       <div class="span3" style="margin:0;">
         <%= render :partial => "shared/adds" %>
