--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,9 +1,38 @@
-<%= t('.header') %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("course name", "") %> <span class="divider">/</span></li>
+          <li></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+      
+      </div>
+    
+      <div class="span10">
+        <%= t('.header') %>
 
-<ul id="discussions">
-  <% @discussions.each do |discussion| %>
-    <li>
-      <%= link_to discussion.title, discussion %>
-    </li>
-  <% end %>
-</ul>
+        <ul id="discussions">
+          <% @discussions.each do |discussion| %>
+            <li>
+              <%= link_to discussion.title, discussion %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    
+      <div class="span3">
+      
+      </div>
+    </div>
+    
+  </div>
+</div>
