Assignments section done

--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -13,6 +13,6 @@
   </div>
 
   <%= form.buttons do %>
-    <%= form.commit_button :button_html => {:id => :submit, :class => 'btn'} %>
+    <%= form.commit_button :button_html => {:id => :submit, :class => 'btn right'} %>
   <% end %>
 <% end %>
