--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -193,33 +193,39 @@ body {
 	color: #fff;
 }
 
-.wall label {
+.wall label, .assignments label {
 	display: none;
 }
 
-.wall .actions {
+.wall .actions, .assignments .actions {
   	margin-top: 0;
  	margin-bottom: 18px;
 	padding: 5px 20px 1px;
 }
 
-.wall .textarea-size {
+.wall .textarea-size, .assignments .textarea-size {
 	width: 480px;
 }
 
-.wall .comment-box {
+.wall .comment-box, .assignments .comment-box {
 	border-top: 1px solid #eaeaea;
 	padding-top: 10px;
 	margin-top: 10px;
 }
 
-.wall .span1 {
+.wall .span1, .assignments .span1 {
 	margin-left: 20px;
 }
 
-.wall h6 {
+.wall h6, .assignments h6 {
 	line-height: 10px;
 	margin-bottom: 5px;
+}
+
+.assignment-values {
+	display: block;
+	margin-left: 20px;
+	color: #a9a9a9;
 }
 /* @end */
 
