--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -1,2 +1,32 @@
-<h1><%= t('.new_assignature') %></h1>
-<%= render :partial => 'form' %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@courses.name, course_path(@courses)) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@courses)) %> <span class="divider">/</span></li>
+          <li><%= link_to(@assignment.name, assignment_path(@assignment)) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('courses.assignments.edit_assignment') %></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+
+      </div>
+      
+      <div class="span10">
+        <h2><%= t('courses.assignments.edit_assignment') %></h2>
+        <%= render :partial => 'form' %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+    
+  </div>
+</div>
