--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -20,24 +20,37 @@
         <%= render :partial => "courses/members_menu" %>
       </div>
       
-      <div class="span10">
-      <% if current_user.manageable_assignments.include? @assignment %>
-        <%= link_to t('.edit'), edit_assignment_path(@assignment), :id => 'edit' %>
-        <%= link_to t('.delete'), @assignment, :id => 'delete', :method => :delete, :confirm => t('confirm_delete') %>
-      <% end %>
-
-      <h1><%= Assignment.model_name.human %> <%= @assignment.name %></h1>
-
-      <%= @assignment.course.name %>
-      <%= @assignment.name %>
-      <%= @assignment.description %>
-      <%= @assignment.value %>
-      <%= @assignment.period %>
-      <%= l @assignment.due_to, :format => :short %>
+      <div class="span10 assignments">
+        <div class="row bottom-margin">
+          <div class="span5">
+            <h2><%= Assignment.model_name.human %>: <%= @assignment.name %></h2>
+          </div>
+          <div class="span3" style="margin-left:70px;">
+            <% if current_user.manageable_assignments.include? @assignment %>
+              <%= link_to t('formtastic.actions.delete'), @assignment, :id => 'delete', :class => 'btn danger right', :style => 'margin-left:10px;', :method => :delete, :confirm => t('confirm_delete') %>
+              <%= link_to t('formtastic.actions.edit'), edit_assignment_path(@assignment), :id => 'edit', :class => 'btn info right' %>
+            <% end %>
+          </div>
+        </div>
+        <h6><%= t('courses.course')%>: <%= @assignment.course.name %></h6>
+      <p><%= @assignment.description %></p>
+      
+      <div class="row">
+        <div class="assignment-values bottom-margin">
+          <%= t('courses.assignments.value') %>: <b><%= @assignment.value %></b> -
+          <%= t('courses.assignments.period') %>: <b><%= @assignment.period %></b> -
+          <%= t('courses.assignments.date_time') %>: <b><%= l @assignment.due_to, :format => :short %></b>
+        </div>
+      </div>
 
       <%= render :partial => 'shared/assets_table', :locals => {:record => @assignment} %>
+      
+      <div class="actions">
+        <h2><%= t('courses.assignments.comments') %></h2>
+        <%= render :partial => 'comments/form',       :locals => {:commentable => @assignment} %>
+      </div>
+      
       <%= render :partial => 'comments/comments',   :locals => {:commentable => @assignment} %>
-      <%= render :partial => 'comments/form',       :locals => {:commentable => @assignment} %>
       </div>
       
       <div class="span3" style="margin:0;">
