--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -19,6 +19,6 @@
     <%= render :partial => 'shared/assets_fields', :locals => {:form => form} %>
   </div>
   <%= form.buttons do %>
-    <%= form.commit_button :button_html => {:id => :submit, :class => 'btn'} %>
+    <%= form.commit_button :button_html => {:id => :submit, :class => 'btn right'} %>
   <% end %>
 <% end %>
