--- a/app/views/assignments/edit.html.erb
+++ b/app/views/assignments/edit.html.erb
@@ -6,8 +6,8 @@
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
           <li><%= link_to("Courses", courses_path) %> <span class="divider">/</span></li>
-          <li><%= link_to(@courses.name, course_path(@courses)) %> <span class="divider">/</span></li>
-          <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@courses)) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.assignments.assignments'), course_assignments_path(@course)) %> <span class="divider">/</span></li>
           <li><%= link_to(@assignment.name, assignment_path(@assignment)) %> <span class="divider">/</span></li>
           <li class="active"><%= t('courses.assignments.edit_assignment') %></li>
         </ul>  
@@ -16,12 +16,15 @@
     
     <div class="row">
       <div class="span3">
-
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
       </div>
       
       <div class="span10">
         <h2><%= t('courses.assignments.edit_assignment') %></h2>
-        <%= render :partial => 'form' %>
+        <%= semantic_form_for @assignment do |form| %>
+          <%= render :partial => 'form', :locals => {:form => form} %>
+        <% end %>
       </div>
       <div class="span3" style="margin:0;">
         <%= render :partial => "shared/adds" %>
