--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,3 +1,6 @@
+<%= link_to t('.new_discussion'), new_course_discussion_path(@course), :id => 'new_discussion' %>
+
+
 <div class="container">
   <div class="content">
     
