Flashes and account conf done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,12 @@
 <body>
   <%= user_signed_in? ? render(:partial => "shared/topbar") : render(:partial => 'shared/topbar_with_login') %>
   <% flash.each do |key, val| %>
-    <div class="flash <%= key %>"><%= val %></div>
+  <div class="container">
+    <div class="alert-message <%= key %>">
+      <a class="close" href="#">&times;</a>
+      <p><%= val %></p>
+    </div>
+  </div>
   <% end %>
   <%= yield %>
 </body>
