--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -30,7 +30,7 @@
           </div>
           <div class="span2">
             <% if current_user.manageable_courses.include? @course %>
-              <%= link_to("Edit Course", edit_course_path(@course), :class => "btn info small right") %>
+              <%= link_to(t('courses.edit_course'), edit_course_path(@course), :class => "btn info small right") %>
             <% end %>
           </div>
         </div>
