--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -1,16 +1,36 @@
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('dashboard.account_settings') %></li>
+        </ul>  
+      </div>
+    </div>
+    
+    <div class="row">
+      <div class="span3">
+        
+      </div>
+      <div class="span10">
+        <h2><%= t('.title') %></h2>
+      
+          <h3><%= t('.change_password') %></h3>
+          <%= semantic_form_for current_user, :url => password_settings_path do |form| %>
+            <%= form.inputs do %>
+              <%= form.input :password, :as => :password %>
+              <%= form.input :password_confirmation, :as => :password %>
+            <% end %>
+            <%= form.buttons do %>
+              <%= form.commit_button :button_html => {:id => :submit, :class => "btn", :style => "margin-left:205px;"} %>
+            <% end %>
+          <% end %>
 
-<h1><%= t('.title') %></h1>
+      </div>
+    </div>
 
-
-<div id="change_password">
-  <h3><%= t('.change_password') %></h3>
-
-  <%= semantic_form_for current_user, :url => password_settings_path do |form| %>
-    <%= form.input :password, :as => :password %>
-    <%= form.input :password_confirmation, :as => :password %>
-
-    <%= form.buttons do %>
-      <%= form.commit_button :button_html => {:id => :submit} %>
-    <% end %>
-  <% end %>
+  </div>
+  <%= render :partial => "shared/footer" %>
 </div>
