Fixes the reference label do say Horario/Grupo

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -11,7 +11,7 @@
     <%= form.input :description, :input_html => {:class => "span6"} %>
     <%= form.input :start_date, :as => :string, :input_html => {:placeholder => "dd-mm-yy", :class => 'span6 datepicker'} %>
     <%= form.input :finish_date, :as => :string, :input_html => {:placeholder => "dd-mm-yy", :class => 'span6 datepicker'} %>
-    <%= form.input :reference, :input_html => {:class => "span6"} %>
+    <%= form.input :reference, :label => t('courses.details'), :input_html => {:class => "span6"} %>
     <%= form.input :public %>
   <% end %>
 
