--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -1,2 +1,33 @@
-<h1><%= t('.new_discussion') %></h1>
-<%= render :partial => 'form' %>
+<div class="container">
+  <div class="content">
+    
+    <div class="row">
+      <div class="span16">
+        <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(t('courses.courses'), courses_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(@course.name, course_path(@course)) %> <span class="divider">/</span></li>
+          <li class="active"><%= t('discussions.new_discussion') %></li>
+        </ul>  
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
+      </div>
+      
+      <div class="span10">
+        <h1><%= t('discussions.new_discussion') %></h1>
+        <%= semantic_form_for [@course, @discussion] do |form| %>
+          <%= render :partial => 'form', :locals => {:form => form} %>
+        <% end %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+
+  </div>
+</div>
