--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,10 +1,3 @@
-<% content_for :head do %>
-  <style>
-    .comment .comment {
-      padding-left: 80px;
-    }
-  </style>
-<% end %>
 <div class="comments">
   <% commentable.comments.order("created_at DESC").each do |comment| %>
     <div class="comment comment-box" id="<%= "comment_#{comment.id}" %>">
@@ -22,14 +15,22 @@
           <% end %>
           <% unless Comment === comment.commentable %>
             <%= link_to t('comment'), '#' , :class => "toggle_comment_box"%>
-            <div class="comment-form" style='display:none'>
-              <%= render :partial => 'comments/comment_form', :locals => {:commentable => comment} %>
-            </div>
           <% end %>
           </p>
         </div>
       </div>
-      <%= render :partial => 'comments/comments', :locals => {:commentable => comment} unless comment.comments.blank? %>
+      
+      <div class="comment-comments">
+        <%= render :partial => 'comments/comment_comments', :locals => {:commentable => comment} unless comment.comments.blank? %>
+        <% unless Comment === comment.commentable %>
+          <div class="comment-form" style='display:none;'>
+            <div class="comment body" id="<%= "comment_#{comment.id}" %>">
+              <%= render :partial => 'comments/comment_form', :locals => {:commentable => comment} %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      
     </div>
   <% end %>
 </div>
