--- a/app/views/course_requests/index.html.erb
+++ b/app/views/course_requests/index.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="span3">
         <%= render :partial => "courses/course_menu" %>
+        <%= render :partial => "courses/members_menu" %>
       </div>
       <div class="span10">
         <h2><%= t('courses.requests.pending_requests') %></h2>
