--- a/app/views/courses/members.html.erb
+++ b/app/views/courses/members.html.erb
@@ -15,6 +15,7 @@
     <div class="row">
       <div class="span3">
         <%= render :partial => "course_menu" %>
+        <%= render :partial => "members_menu" %>
       </div>
       <div class="span10">
         <h2><%= t('courses.members.members_in_course') %></h2>
